--- a/FoodTrucks/NearestFoodTruck/templates/nearest_food_trucks.html
+++ b/FoodTrucks/NearestFoodTruck/templates/nearest_food_trucks.html
@@ -16,15 +16,15 @@
                 <div class="row g-3">
                     <div class="col-md-4">
                         <label for="latitude" class="form-label">Latitude</label>
-                        <input type="number" name="latitude" id="latitude" class="form-control" placeholder="Enter Latitude" value="{{ latitude|default:'' }}" required>
+                        <input type="number" step="any"  min="-90" max="90" name="latitude" id="latitude" class="form-control" placeholder="Enter Latitude" value="{{ latitude|default:'' }}" required>
                     </div>
                     <div class="col-md-4">
                         <label for="longitude" class="form-label">Longitude</label>
-                        <input type="number" step="0.000000000000000000001" name="longitude" id="longitude" class="form-control" placeholder="Enter Longitude" value="{{ longitude|default:'' }}" required>
+                        <input type="number" step="any" min="-180" max="180" name="longitude" id="longitude" class="form-control" placeholder="Enter Longitude" value="{{ longitude|default:'' }}" required>
                     </div>
                     <div class="col-md-4">
                         <label for="limit" class="form-label">Limit</label>
-                        <input type="number" step="0.000000000000000000001" name="limit" id="limit" class="form-control" placeholder="Enter Limit" value="{{ limit|default:10 }}" required>
+                        <input type="number" name="limit" id="limit" class="form-control" placeholder="Enter Limit" value="{{ limit|default:10 }}" required>
                     </div>
                 </div>
                 <div class="row g-3 mt-3">
@@ -45,7 +45,6 @@
                             <img src="{{ truck.image_url }}" class="card-img-top" alt="Food Truck">
                             <div class="card-body">
                                 <h5 class="card-title">{{ truck.applicant }}</h5>
-                                <h1>Index:  {{truck.cnn}}</h1>
                                 <p class="card-text">
                                     <strong>Address:</strong> {{ truck.address }}<br>
                                     <strong>Food Items:</strong> {{ truck.food_items }}<br>
